[gd_scene load_steps=32 format=2]

[ext_resource path="res://scenes/Creature.gd" type="Script" id=1]
[ext_resource path="res://sprites/ally_face.png" type="Texture" id=2]
[ext_resource path="res://sprites/circle_64.png" type="Texture" id=3]
[ext_resource path="res://sprites/upgrade_button_textures.png" type="Texture" id=4]
[ext_resource path="res://sprites/reteating_test.png" type="Texture" id=5]
[ext_resource path="res://misc/fonts/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://sprites/particle.png" type="Texture" id=7]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.75
rough = true
bounce = 0.5
absorbent = true

[sub_resource type="CircleShape2D" id=19]
radius = 50.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=20]
radius = 4000.0

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 0.623864 ), 0.0, 0.0, 0, 0, Vector2( 0.881188, 0.596591 ), 0.0, -7.34546, 0, 0, Vector2( 1, 0 ), -5.06043, 0.0, 0, 0 ]

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.164706, 0.164706, 0.164706, 0.54902 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 2

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="StreamTexture" id=15]
flags = 4
load_path = "res://.import/level_indicator.png-236453d97943c36c7cea324633d49dc8.stex"

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = SubResource( 15 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="StreamTexture" id=16]
flags = 4
load_path = "res://.import/level_indicator.png-236453d97943c36c7cea324633d49dc8.stex"

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = SubResource( 16 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="StreamTexture" id=17]
flags = 4
load_path = "res://.import/level_indicator.png-236453d97943c36c7cea324633d49dc8.stex"

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = SubResource( 17 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="StreamTexture" id=18]
flags = 4
load_path = "res://.import/level_indicator.png-236453d97943c36c7cea324633d49dc8.stex"

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = SubResource( 18 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../UpgradeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../FaceSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Polygon2D:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, 64, 48, 48, 64, 0, 48, -48, 0, -64, -48, -48, -64, 0, -48, 48 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("..:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=24]
resource_name = "attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../Polygon2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../FaceSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.6, 2.4 ), Vector2( 2.4, 1.6 ), Vector2( 2, 2 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "consumed"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Polygon2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 0.6 ), Vector2( 0.8, 0.343 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../FaceSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.6, 1.4 ), Vector2( 1.4, 0.754 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Polygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, 64, 48, 48, 64, 0, 48, -48, 0, -64, -48, -48, -64, 0, -48, 48 ), PoolVector2Array( 0, 64, 48, 48, 52.1429, 21.6667, 51.4286, -1.66667, 56.5041, -22.4877, 48, -48, 32.8571, -41.6667, 17.8571, -40, 9.24741, -60.9175, 0, -64, -30, -51.6667, -47.8571, -36.6667, -64, 0, -55.7143, 28.3333, -43.5714, 31.6667, -33.5714, 31.6667, -22.3532, 56.5489 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "dead"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../Polygon2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1.4, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../FaceSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.4, 1.6 ), Vector2( 2.6, 1.4 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "spawn"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("..:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.98 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_physics_process"
}, {
"args": [ false ],
"method": "set_physics_process"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Polygon2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../FaceSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "upgrade"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../UpgradeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../UpgradeParticles")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Polygon2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../FaceSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.6, 2.4 ), Vector2( 2.4, 1.6 ), Vector2( 2, 2 ), Vector2( 2, 2 ) ]
}

[node name="Creature" type="RigidBody2D" groups=["creature"]]
input_pickable = true
mass = 1.02041
physics_material_override = SubResource( 3 )
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true
linear_damp = 2.0
angular_damp = 100.0
script = ExtResource( 1 )
speed = 500.0

[node name="Polygon2D" type="Polygon2D" parent="."]
texture = ExtResource( 5 )
polygon = PoolVector2Array( 0, 64, 48, 48, 64, 0, 48, -48, 0, -64, -48, -48, -64, 0, -48, 48 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="VisionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="VisionShape" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource( 2 )

[node name="DeadCheckArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="VisionShape" type="CollisionShape2D" parent="DeadCheckArea"]
shape = SubResource( 20 )

[node name="BodySprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="UpgradeParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.54
lifetime_randomness = 1.0
fixed_fps = 60
local_coords = false
texture = ExtResource( 7 )
emission_shape = 1
emission_sphere_radius = 64.0
direction = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.3
linear_accel = 10.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 21 )
color = Color( 0.956863, 0.941176, 0.47451, 1 )

[node name="FaceSprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="EatTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="TargetValidatorTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UIHolder" type="Node2D" parent="."]
z_index = 10

[node name="Control" type="Control" parent="UIHolder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -414.0
margin_right = 200.0
margin_bottom = 63.0
mouse_filter = 2

[node name="Container" type="VBoxContainer" parent="UIHolder/Control"]
anchor_right = 1.0
margin_bottom = 164.0
mouse_filter = 2
alignment = 1

[node name="InfoContainer" type="HBoxContainer" parent="UIHolder/Control/Container"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="UIHolder/Control/Container/InfoContainer"]
visible = false
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 28 )
align = 1
valign = 1
autowrap = true

[node name="UpgradeButtonContainer" type="HBoxContainer" parent="UIHolder/Control/Container"]
margin_top = 204.0
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 96 )
mouse_filter = 2
alignment = 1

[node name="SizeButton" type="TextureButton" parent="UIHolder/Control/Container/UpgradeButtonContainer"]
visible = false
margin_left = 2.0
margin_right = 98.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = SubResource( 4 )
expand = true

[node name="DMGButton" type="TextureButton" parent="UIHolder/Control/Container/UpgradeButtonContainer"]
visible = false
margin_left = 52.0
margin_right = 148.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = SubResource( 5 )
expand = true

[node name="SpawnButton" type="TextureButton" parent="UIHolder/Control/Container/UpgradeButtonContainer"]
visible = false
margin_left = 102.0
margin_right = 198.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = SubResource( 6 )
expand = true

[node name="HealButton" type="TextureButton" parent="UIHolder/Control/Container/UpgradeButtonContainer"]
visible = false
margin_left = 152.0
margin_right = 248.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture_normal = SubResource( 7 )
expand = true

[node name="LevelContainer" type="HBoxContainer" parent="UIHolder/Control/Container"]
margin_top = 304.0
margin_right = 400.0
margin_bottom = 368.0
mouse_filter = 2
alignment = 1

[node name="Level1Texture" type="TextureRect" parent="UIHolder/Control/Container/LevelContainer"]
margin_left = 130.0
margin_right = 162.0
margin_bottom = 64.0
mouse_filter = 2
texture = SubResource( 12 )

[node name="Level2Texture" type="TextureRect" parent="UIHolder/Control/Container/LevelContainer"]
margin_left = 166.0
margin_right = 198.0
margin_bottom = 64.0
mouse_filter = 2
texture = SubResource( 13 )

[node name="Level3Texture" type="TextureRect" parent="UIHolder/Control/Container/LevelContainer"]
margin_left = 202.0
margin_right = 234.0
margin_bottom = 64.0
mouse_filter = 2
texture = SubResource( 14 )

[node name="Level4Texture" type="TextureRect" parent="UIHolder/Control/Container/LevelContainer"]
margin_left = 238.0
margin_right = 270.0
margin_bottom = 64.0
mouse_filter = 2
texture = SubResource( 11 )

[node name="Animations" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
autoplay = "spawn"
anims/RESET = SubResource( 23 )
anims/attack = SubResource( 24 )
anims/consumed = SubResource( 26 )
anims/dead = SubResource( 25 )
anims/spawn = SubResource( 27 )
anims/upgrade = SubResource( 22 )

[connection signal="body_entered" from="." to="." method="_on_Creature_body_entered"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_VisionArea_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]
[connection signal="timeout" from="EatTimer" to="." method="_on_EatTimer_timeout"]
[connection signal="timeout" from="TargetValidatorTimer" to="." method="_on_TargetValidatorTimer_timeout"]
[connection signal="button_down" from="UIHolder/Control/Container/UpgradeButtonContainer/SizeButton" to="." method="upgrade_size"]
[connection signal="mouse_entered" from="UIHolder/Control/Container/UpgradeButtonContainer/SizeButton" to="." method="_on_SizeButton_mouse_entered"]
[connection signal="mouse_exited" from="UIHolder/Control/Container/UpgradeButtonContainer/SizeButton" to="." method="reset_label_info"]
[connection signal="button_down" from="UIHolder/Control/Container/UpgradeButtonContainer/DMGButton" to="." method="upgrade_damage"]
[connection signal="mouse_entered" from="UIHolder/Control/Container/UpgradeButtonContainer/DMGButton" to="." method="_on_DMGButton_mouse_entered"]
[connection signal="mouse_exited" from="UIHolder/Control/Container/UpgradeButtonContainer/DMGButton" to="." method="reset_label_info"]
[connection signal="button_down" from="UIHolder/Control/Container/UpgradeButtonContainer/SpawnButton" to="." method="upgrade_duplicate"]
[connection signal="mouse_entered" from="UIHolder/Control/Container/UpgradeButtonContainer/SpawnButton" to="." method="_on_SpawnButton_mouse_entered"]
[connection signal="mouse_exited" from="UIHolder/Control/Container/UpgradeButtonContainer/SpawnButton" to="." method="reset_label_info"]
[connection signal="button_down" from="UIHolder/Control/Container/UpgradeButtonContainer/HealButton" to="." method="upgrade_heal"]
[connection signal="mouse_entered" from="UIHolder/Control/Container/UpgradeButtonContainer/HealButton" to="." method="_on_HealButton_mouse_entered"]
[connection signal="mouse_exited" from="UIHolder/Control/Container/UpgradeButtonContainer/HealButton" to="." method="reset_label_info"]
